--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         src="https://code.jquery.com/jquery-3.2.1.js"
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
         crossorigin="anonymous"></script>
+      <script src="apiqueries.js"></script>
   </head>
   <body>
     Hello, world
