--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
         crossorigin="anonymous"></script>
+      <script src="js/objects.js"></script>
       <script src="js/apiqueries.js"></script>
       <script src="js/uilogic.js"></script>
   </head>
