--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>THIO - Text Messaging</title>
+      <title>Send Me Love</title>
       <meta charset="UTF-8">
+      <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> 
       <script
         src="https://code.jquery.com/jquery-3.2.1.js"
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -29,7 +30,10 @@
     <div class="container">
 
       <div class="page-header">
-        <h1>Text Messaging Service</h1>
+        <h1 style="font-family: 'Pacifico';">
+          Send Me Love
+          <span class="glyphicon glyphicon-heart" style="color:red"></span>
+        </h1>
       </div>
 
  <div id="peopleListPage">
@@ -50,29 +54,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Jane Doe</td>
-              <td>+16135555555</td>
-              <td>
-                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-              </td>
-              <td>
-                <span class="badge">3</span>
-              </td>
-              <td>
-                <button type="button" class="btn btn-success">
-                  View &amp; Edit Messages
-                </button>
-
-                <button type="button" class="btn btn-success">
-                  Edit Schedule
-                </button>
-
-                <button type="button" class="btn btn-danger">
-                  Delete
-                </button>
-              </td>
-            </tr>
           </tbody>
         </table>
       </div>
@@ -148,17 +129,6 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>You're an amazing person.</td>
-                <td>
-                  <button type="button" class="btn btn-success">
-                    Edit
-                  </button>
-                  <button type="button" class="btn btn-danger">
-                    Delete
-                  </button>
-                </td>
-              </tr>
             </tbody>
           </table>
         </div>
@@ -260,7 +230,6 @@
         <table class="table" id="scheduleTable">
           <thead>
             <tr>
-              <th>Message Sent At</th>
               <th>Year</th>
               <th>Day of Week</th>
               <th>Month</th>
@@ -271,22 +240,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>*</td>
-              <td>Monday</td>
-              <td>*</td>
-              <td>*</td>
-              <td>15</td>
-              <td>00</td>
-              <td>
-                <button type="button" class="btn btn-success">
-                  Edit
-                </button>
-                <button type="button" class="btn btn-danger">
-                  Delete
-                </button>
-              </td>
-            </tr>
           </tbody>
         </table>
       </div>
