Added badge, delete.

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
               <th>Name</th>
               <th>Phone Number</th>
               <th>Enabled</th>
-              <th>No. of Messages</th>
+              <th>Messages</th>
               <th></th>
             </tr>
           </thead>
