--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" onclick="submitPerson()">
+              <button type="button" class="btn btn-primary buttonAdd" onclick="submitPerson()">
                 Add peer supporter
               </button>
               <button type="button" class="btn btn-secondary" 
